# rust_actix_starter

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
src/: main.rs
src/api/: handler_create_user.rs  handler_index.rs  interfaces.rs  mod.rs
src/config/: load_config.rs
src/config/environment/: local.yml
src/db/: dynamodb.rs
src/users/: model.rs  service.rs
src/users/storage/: model.rs  service.rs
