[package]
name = "rust_actix_starter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
actix-session = "0.4"
futures = "0.3"
async-trait = "0.1.57"
serde = "1"
serde_json = "1"
serde_yaml = "0.8.23"
tokio = { version = "1", features = ["full"] }
mockall = "0.11.0"

