[package]
name = "rust_actix_starter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
actix-session = "0.4"
actix-files = "0.3"

serde = "1"
serde_json = "1"
serde_yaml = "0.8.23"

tokio = { version = "1", features = ["full"] }
chrono = "0.4.23"
uuid = { version = "0.4", features = ["serde", "v4"] }
pbkdf2 = "0.11.0"
futures = "0.3"
async-trait = "0.1.57"
mockall = "0.11.0"
tracing = "0.1"
structopt = { version = "0.3", default-features = false }

aws-sdk-dynamodb = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "next" }
aws-config = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "next" }
aws-smithy-http = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "next", features = ["rt-tokio"] } 

